* marshal.c (w_object): add flonum to arg->data to keep reference index   consistency. [ruby-core:49323] [Bug #7348]

* test/ruby/test_marshal.rb: add a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37687 b2dd03c8-39d4-4d8f-98ff-823fe69b080e